# k8s-cluster

./: .envrc  .gitignore  .gitmodules  .mcp.json  AGENTS.md  SUBMODULES.md  flake.nix  readme.md  todos.md
remote/bastion-rs/: Cargo.toml  Dockerfile  readme.md
remote/bastion-rs/src/: main.rs
remote/billing-server-rs/: Cargo.toml  readme.md
remote/billing-server-rs/k8s/ec2/: dd-billing-server.deployment.yaml
remote/billing-server-rs/migrations/: 20260518000002_connections.sql  20260518000003_reconciliation.sql  20260518000004_locks.sql  20260518000005_scheduler.sql  20260518000007_coinflow.sql
remote/billing-server-rs/src/: config.rs  error.rs  jobs.rs  locks.rs  main.rs  shard.rs  state.rs  users.rs
remote/billing-server-rs/src/api/: connections.rs  customers.rs  health.rs  ledger.rs  locks.rs  mod.rs  oauth.rs  tenants.rs  users.rs  vendors.rs  verify.rs  webhooks.rs
remote/billing-server-rs/src/ledger/: mod.rs  service.rs
remote/billing-server-rs/src/notifications/: channels.rs  service.rs  types.rs
remote/billing-server-rs/src/providers/: braintree.rs  coinbase.rs  connection.rs  mod.rs  paypal.rs  plaid.rs  solana.rs  stripe.rs
remote/billing-server-rs/src/scheduler/: handler.rs  mod.rs  runner.rs  types.rs
remote/billing-server-rs/src/solana/: anchor.rs  client.rs  mod.rs
remote/billing-server-rs/src/sync/: handler.rs  mod.rs  rate_limit.rs  stripe_sync.rs
remote/build-server-rs/: Cargo.toml  Dockerfile  readme.md
remote/build-server-rs/src/: main.rs
remote/deployments/agent-worker-broker-rs/: Cargo.toml  readme.md
remote/deployments/agent-worker-broker-rs/src/: main.rs
remote/deployments/ai-agent-bridge-rs/: Cargo.toml  Dockerfile  README.md
remote/deployments/ai-agent-bridge-rs/src/: main.rs
remote/deployments/apostille-services-server-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/apostille-services-server-rs/src/: main.rs
remote/deployments/auth-server-rs/: Cargo.toml  readme.md
remote/deployments/auth-server-rs/src/: main.rs
remote/deployments/bastion-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/bastion-rs/src/: main.rs
remote/deployments/billing-server-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/billing-server-rs/migrations/: 20260518000001_init.sql  20260518000006_notifications.sql  20260518000007_sync_hardening.sql  20260518000009_webhook_hardening.sql  20260520000010_more_providers.sql  20260522000011_audit_hardening_and_crypto_houses.sql  20260523000012_security_hardening.sql  20260606000013_remittance_limited_fit.sql  20260607000014_faster_payment_and_zelle_providers.sql  20260609000015_webhook_payload_encryption.sql  20260609000016_partner_providers.sql
remote/deployments/billing-server-rs/src/: cdc.rs  config.rs  crypto.rs  customer_locks.rs  customers.rs  db.rs  error.rs  events.rs  fiducia.rs  jobs.rs  locks.rs  main.rs  money.rs  shard.rs  state.rs  tenants.rs  users.rs  vendors.rs
remote/deployments/browser-job-runner-rs/: .gitignore  Cargo.toml  readme.md
remote/deployments/browser-job-runner-rs/src/: main.rs
remote/deployments/browser-job-runner-rs/worker/: Dockerfile  package.json  pnpm-lock.yaml
remote/deployments/build-server-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/build-server-rs/scripts/: dpm.sh
remote/deployments/build-server-rs/src/: db.rs  events.rs  fiducia.rs  gh_secrets.rs  lambda_exec.rs  main.rs  profiles.rs  webhooks.rs
remote/deployments/chaos-rs/: Cargo.toml  Dockerfile  README.md
remote/deployments/chaos-rs/k8s/: deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml
remote/deployments/chaos-rs/src/: main.rs
remote/deployments/cluster-mcp-rs/: AUDIT.md  Cargo.toml  Dockerfile  readme.md
remote/deployments/cluster-mcp-rs/src/: main.rs
remote/deployments/container-pool-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/container-pool-rs/runtime-images/: dart.Dockerfile  erlang.Dockerfile  gleamlang.Dockerfile  golang.Dockerfile  python3.Dockerfile  readme.md  rust.Dockerfile
remote/deployments/container-pool-rs/scripts/: nerdctl-process-shim.py
remote/deployments/container-pool-rs/src/: main.rs
remote/deployments/contract-service-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/contract-service-rs/src/: coordination.rs  main.rs  solana_features.rs
remote/deployments/daedalus-web-server-rs/: AGENTS.md  Cargo.toml  readme.md
remote/deployments/daedalus-web-server-rs/assets/: htmx-ws.min.js  htmx.min.js
remote/deployments/daedalus-web-server-rs/scripts/: dpm.sh
remote/deployments/daedalus-web-server-rs/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  persistence.rs  routes.rs  supabase_auth.rs  views.rs  ws.rs
remote/deployments/dataset-labeling-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/dd-benefactor-marketing-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/dd-compliance-rs/: Cargo.toml  readme.md
remote/deployments/dd-data-viz-rs/: Cargo.toml  Dockerfile  audit.md  readme.md
remote/deployments/dd-document-rs/: Cargo.toml  Dockerfile  build.rs  readme.md
remote/deployments/dd-email-sms-contact-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/dd-embeddings-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/dd-git-rs/: Cargo.toml  Dockerfile  readme.md
remote/deployments/dd-git-rs/src/: vcs.rs  (+1 more)
remote/deployments/dd-gpu-rs/: Cargo.toml  readme.md
remote/formal-methods-server-rs/: Cargo.toml  Dockerfile  readme.md
remote/formal-methods-server-rs/k8s/: dd-formal-methods-server.deployment.yaml  dd-formal-methods-server.service.yaml
remote/formal-methods-server-rs/sample-annotations/: inc.rs.txt
remote/formal-methods-server-rs/src/: main.rs
remote/mdp-optimizer-rs/: Cargo.toml  readme.md
remote/mdp-optimizer-rs/src/: main.rs
remote/rest-api-rs/: Cargo.toml  readme.md
remote/rest-api-rs/src/: main.rs  pg_contract.rs
remote/trading-server-rs/: Cargo.toml  readme.md
remote/trading-server-rs/src/: main.rs
remote/ws-loadtest-rs/: Cargo.toml  Dockerfile  README.md
remote/ws-loadtest-rs/src/: main.rs
(+2136 files in other folders)
