[package]
name = "dd-remote-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "=0.38.0"
axum = { version = "0.7", features = ["macros"] }
# Single source of truth for the shared RDS Postgres contract. Reads /
# writes against `app_config`, `lambda_functions`, `agent_remote_dev_*`,
# and `known_git_repos` route through canonical column/table constants
# in `pg_contract` so a schema-only diff in remote/libs/pg-defs/schema/
# schema.sql immediately surfaces here (instead of silently shipping a
# stale read or write).
dd-pg-defs = { path = "../libs/pg-defs/generated/rust" }
# WAL gateway subscription. The REST API already publishes NATS events
# from its own write handlers, but CDC gives us a coalesced fan-out for
# *every* row change — including writes made via psql, direct migrations,
# or other services — so downstream consumers (gleam-lambda-runner etc.)
# stay consistent regardless of who wrote the row.
dd-wal-consumer = { path = "../libs/wal-consumer-rs" }
once_cell = "1"
prometheus = "0.13"
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = { version = "=0.23.20", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "=2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.44"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "=0.7.12", features = ["with-serde_json-1"] }
tokio-postgres-rustls = "=0.12.0"
webpki-roots = "=0.26.7"
