[package]
name = "ws-loadtest-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
