[package]
name = "ws-loadtest-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
hdrhistogram = { version = "7", default-features = false }
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
