[package]
name = "dd-agent-worker-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "=0.38.0"
axum = { version = "0.7", features = ["macros"] }
dd-runtime-config-client = { path = "../../libs/runtime-config-client-rs" }
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "=0.23.20", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.44"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
