[package]
name = "ai-agent-bridge"
version = "0.1.0"
edition = "2021"

# Token-protected LAN inbox so a peer AI agent (e.g. the Codex MacBook) can push
# messages to THIS Claude session. Rust port of the retired `claude_inbox_bridge.py`.
# Deliberately dependency-light: a threaded std-net HTTP/1.1 server + serde_json for
# robust body parsing/serialization. No async runtime needed for two routes.
[dependencies]
serde_json = "1"

[[bin]]
name = "ai-agent-bridge"
path = "src/main.rs"
