[package]
name = "dd-apostille-services-server"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust Axum service for apostille, notary, immigration, translation, and configured government-provider interop workflows."

[[bin]]
name = "dd-apostille-services-server"
path = "src/main.rs"

[dependencies]
dd-telemetry = { path = "../../libs/telemetry-rs" }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
