[package]
name = "dd-remote-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "form"] }
data-encoding = "2"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
