[package]
name = "dd-bastion"
version = "0.1.0"
edition = "2021"

[dependencies]
dd-telemetry = { path = "../../libs/telemetry-rs" }
tracing = "0.1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
dd-runtime-config-client = { path = "../../libs/runtime-config-client-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
