[package]
name = "billing-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes"] }
anyhow = "1.0.102"
async-nats = "=0.38.0"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
# Subscribe to the central WAL gateway's CDC stream. By default the
# subscription is OFF (BILLING_CDC_NATS_URL unset) — billing has its own
# database separate from the pg-defs schema, so most deployments don't
# need it. When wired up it provides a structured audit/event feed for
# any table the gateway is publishing.
dd-wal-consumer = { path = "../../libs/wal-consumer-rs", features = ["tracing"] }
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
cron = "0.16.0"
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
hmac = "0.13.0"
rand = "0.10.1"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "http2"] }
serde_urlencoded = "0.7"
rust_decimal = { version = "1.42.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.11", features = ["trace", "cors", "timeout", "limit", "normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
rsa = { version = "0.9", default-features = false, features = ["pem", "sha2"] }
jsonwebtoken = "9"
# Compile-time HTML templates for the optional /admin HTMX surface.
# Enabling the `axum` feature gives us `IntoResponse` for `Markup`.
maud = { version = "0.27", features = ["axum"] }
