[package]
name = "dd-browser-job-runner"
version = "0.1.0"
edition = "2021"

# Per-job Puppeteer/Playwright spawner. A small axum HTTP API that, for each
# POST /run, launches ONE short-lived nerdctl worker container (the
# dd-browser-job-worker image) on the node's containerd, hands it the scenario
# plus a NATS result subject, and returns immediately. The worker publishes its
# JSON result to NATS; this server only owns spawn, lifetime (<= 9 min), and
# concurrency. It deliberately has no NATS dependency of its own.

[[bin]]
name = "dd-browser-job-runner"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "process", "sync"] }
