[package]
name = "dd-build-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
dd-runtime-config-client = { path = "../../libs/runtime-config-client-rs" }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = "=0.3.44"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
