[package]
name = "dd-cluster-mcp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
dd-runtime-config-client = { path = "../../libs/runtime-config-client-rs" }
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "=0.23.20", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
