[package]
name = "dd-container-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "=0.38.0"
axum = { version = "0.7", features = ["macros"] }
# Subscribe to the WAL gateway so pool config changes (either via
# `app_config.trading.container_pools.*` or direct edits to
# `container_pool_configs`) refresh pools within a second, instead of
# waiting up to CONTAINER_POOL_CONFIG_REFRESH_SECONDS for the poll.
dd-wal-consumer = { path = "../../libs/wal-consumer-rs" }
futures-util = "0.3"
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "=0.23.20", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "=2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = { version = "=0.7.12", features = ["with-serde_json-1"] }
tokio-postgres-rustls = "=0.12.0"
webpki-roots = "=0.26.7"
