[package]
name = "dd-contract-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "=0.38.0"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
# Source-of-truth NATS subject constants for contract validate/result
# subjects plus the shared runtime events subject.
dd-nats-subject-defs = { path = "../../libs/nats/subject-defs/generated/rust" }
dd-runtime-config-client = { path = "../../libs/runtime-config-client-rs" }
bs58 = "0.5"
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# keccak256 for the EVM module (EIP-55 address checksums + log-topic hashing).
# RustCrypto family, consistent with sha2 above.
sha3 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
