[package]
name = "daedalus-web-server"
version = "0.1.0"
edition = "2021"
description = "Server-rendered Maud/htmx UI for daedalus-fab, read-only over the daedalus Postgres schema."
license = "UNLICENSED"
publish = false

[dependencies]
# Shared org libs. These path deps resolve only when this crate is checked out
# at remote/deployments/ inside the k8s-cluster superproject; see AGENTS.md.
dd-telemetry = { path = "../../libs/telemetry-rs" }
dd-pg-defs-sea-orm = { path = "../../libs/pg-defs/generated/rust/sea-orm" }

axum = { version = "0.7", features = ["macros", "ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jsonwebtoken = "9"
maud = "0.27"
# default-features off drops the `protobuf` feature (protobuf 2.x,
# RUSTSEC-2024-0437); only the text exposition format (TextEncoder) is used.
prometheus = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sea-orm = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "with-uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.5", features = ["trace", "set-header"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
