[package]
name = "dd-dataset-labeling"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "=0.38.0"
axum = { version = "0.7", features = ["macros"] }
dd-nats-subject-defs = { path = "../../libs/nats/subject-defs/generated/rust" }
futures-util = "0.3"
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
