[package]
name = "dd-benefactor-marketing-rs"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust Axum backend for Benefactor Marketing agency CRM, campaigns, automation, reporting, and client portal operations."

[[bin]]
name = "dd-benefactor-marketing-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dd-pg-defs-sea-orm = { path = "../../libs/pg-defs/generated/rust/sea-orm" }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-json", "with-chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
