[package]
name = "dd-compliance-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
dd-runtime-config-client = { path = "../../libs/runtime-config-client-rs" }
reqwest = { version = "=0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
walkdir = "2"
