[package]
name = "dd-data-viz-rs"
version = "0.1.0"
edition = "2021"
description = "Columnar analytics and evolutionary data visualization server."

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.62.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
