[package]
name = "dd-data-viz-rs"
version = "0.1.0"
edition = "2021"
description = "Columnar analytics and evolutionary data visualization server."

[dependencies]
dd-telemetry = { path = "../../libs/telemetry-rs" }
tracing = "0.1"
async-nats = "=0.38.0"
axum = { version = "0.7", features = ["macros", "ws"] }
dd-nats-subject-defs = { path = "../../libs/nats/subject-defs/generated/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.62.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
