[package]
name = "dd-git-rs"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust multi-VCS operations server (git, mercurial, subversion, fossil) backed by Postgres and Redis."

[[bin]]
name = "dd-git-rs"
path = "src/main.rs"

[dependencies]
async-nats = "=0.38.0"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dd-pg-defs = { path = "../../libs/pg-defs/generated/rust" }
futures-util = "0.3"
once_cell = "1"
prometheus = "0.13"
redis = { version = "=0.27.6", default-features = false, features = ["aio", "tokio-comp"] }
rustls = { version = "=0.23.20", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = { version = "=0.7.12", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
tokio-postgres-rustls = "=0.12.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
webpki-roots = "=0.26.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
