[package]
name = "dd-gpu-rs"
version = "0.1.0"
edition = "2021"
description = "Rust GPU job scheduler: submit work, get result. Assigns AI/ML jobs to GPUs respecting per-GPU VRAM capacity over time, minimising makespan."

[dependencies]
dd-telemetry = { path = "../../libs/telemetry-rs" }
tracing = "0.1"
async-nats = "=0.38.0"
axum = { version = "0.7", features = ["macros"] }
# Source-of-truth NATS subject constants for the GPU job request/result lane
# and the shared runtime-events publish default.
dd-nats-subject-defs = { path = "../../libs/nats/subject-defs/generated/rust" }
dd-runtime-config-client = { path = "../../libs/runtime-config-client-rs" }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
